Getting the user object to work
