# server/openapi/openapi.yaml
@@ -15,36 +15,36 @@ tags:
 servers:
   - url: https://app.getaika.com/api
 paths:
-  /users:
-    post:
-      tags:
-      - "user"
-      summary: "Creates a new user and user database"
-      description: ""
-      operationId: "createUser"
-      requestBody:
-        required: true
-        description: User object that needs to be created
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-              - email
-              properties:
-                email:
-                  title: The unique email for a user
-                  description: The email address can be changed, but need to be unique
-                  type: string
-      responses:
-        200:
-          description: "User sucessfully created"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        409:
-          description: "Invalid input"
+#   /users:
+#     post:
+#       tags:
+#       - "user"
+#       summary: "Creates a new user and user database"
+#       description: ""
+#       operationId: "createUser"
+#       requestBody:
+#         required: true
+#         description: User object that needs to be created
+#         content:
+#           application/json:
+#             schema:
+#               type: object
+#               required:
+#               - email
+#               properties:
+#                 email:
+#                   title: The unique email for a user
+#                   description: The email address can be changed, but need to be unique
+#                   type: string
+#       responses:
+#         200:
+#           description: "User sucessfully created"
+#           content:
+#             application/json:
+#               schema:
+#                 $ref: '#/components/schemas/User'
+#         409:
+#           description: "Invalid input"
   /users/{user_id}:
     get:
       tags:
@@ -136,6 +136,43 @@ paths:
                 $ref: '#/components/schemas/User'
         409:
           description: "Invalid input"
+  /syncs/tasks/calendar_sync:
+    post:
+      tags:
+      - "sync"
+      summary: "Runs the sync task synchronously"
+      description: ""
+      operationId: "runSync"
+      requestBody:
+        required: true
+        description: Sync object
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - user_id
+              - calendars
+              properties:
+                user_id:
+                  title: User ID
+                  description: The User ID for which user to start a sync
+                  type: string
+                calendars:
+                  title: IDs to sync
+                  description: IDs to sync
+                  type: array
+                  items:
+                    type: string
+      responses:
+        200:
+          description: "User sucessfully created"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        409:
+          description: "Invalid input"
 components:
   schemas:
     User:
@@ -143,4 +180,11 @@ components:
       properties:
         email:
           type: string
+  securitySchemes:
+    cookieAuth:         # arbitrary name for the security scheme; will be used in the "security" key later
+      type: apiKey
+      in: cookie
+      name: session
+security:
+  - cookieAuth: []
     
